public class ConstAnimation
{
    public const string Mover = "IsMove";
    public const string Fall = "IsFall";
    public const string Jump = "IsJump";
    public const string Attack1 = "IsAttack1";
    public const string Attack2 = "IsAttack2";
    public const string AttackWalk = "IsAttackWalk";
    public const string Die = "IsDie";
    public const string Throw = "IsThrow";
}
